FIX: fix ios overflow issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@ $menu-color: rgb(181, 47, 105);
 
 html {
   height: 100vh;
+  overflow-x: hidden;
 }
 
 header {
